--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "private": true,
-  "name": "@lwj/demo-layout",
   "version": "1.0.0",
-  "description": "Shared components to create nicely styled demos for Learn With Jason.",
+  "name": "learnwithjason-demo-base",
+  "author": "Jason Lengstorf <jason@lengstorf.com>",
   "scripts": {
     "dev": "eleventy --serve",
     "build": "eleventy"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jlengstorf/lwj-demo-layout.git"
-  },
-  "author": "Jason Lengstorf <jason@lengstorf.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jlengstorf/lwj-demo-layout/issues"
-  },
-  "homepage": "https://github.com/jlengstorf/lwj-demo-layout#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0"
-  }
+  },
+  "license": "MIT"
 }
